[UI] Added score tracker to top right.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ SET (SNEK_VERSION_MINOR 0)
 ADD_SUBDIRECTORY (src)
 # include_directories ("${PROJECT_SOURCE_DIR}/assets")
 # include_directories ("${PROJECT_SOURCE_DIR}/include")
-# include_directories ("${PROJECT_SOURCE_DIR}/lib")
+# include_directories ("${PROJECT_SOURCE_DIR}/libs")
